scripts/nullaway/annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8.txt
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/JServer.java:40: error: [NullAway] dereferenced expression this.sel is @Nullable
                while (this.sel.select() > 0) {
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/daily/FoodBuilder.java:31: error: [NullAway] dereferenced expression weakRef.get() is @Nullable
		System.out.println(weakRef.get().getMeatAmount());
		                                ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1323: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:130: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:193: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/quicksort/QuickSort.java:5: error: [NullAway] @NonNull field numbers not initialized
	private int[] numbers;
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/TestXML2JSON.java:110: error: [NullAway] dereferenced expression compiledScript is @Nullable
			compiledScript.eval(bindings) ;
			              ^
    (see http://t.uber.com/nullaway )
../annotator/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/generics/Box.java:22: error: [NullAway] dereferenced expression t is @Nullable
        System.out.println("T: " + t.getClass().getName());
                                    ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
